# boids

./: pyproject.toml
boids/: __main__.py
